# cvepred

./: .gitignore  .pylintrc  Dockerfile  README.md  compose.yml  cvepred.ipynb  eda.ipynb  mkdocs.yml  pyproject.toml  strokrepred.ipynb
.github/workflows/: azure-login.yml  docker.yml  docs.yml
cvepred/: api.py  comapre_models.py  compare_models.py  dataset.py  model.py  nvd.py
cvepred/api/: app.py  models.py
cvepred/base/: dataset.py  model.py
cvepred/lab/: compare_models.py
docs/: 01-datasets.md  02-create-model.md  index.md
strokepred/: comapre_models.py  dataset.py  model.py
strokepred/prepare/: comapre_models.py  profile_data.py
