[tool.poetry]
name = "strokepred"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13"
httpx = "^0.27.2"
pandas = "^2.2.3"
kagglehub = "^0.3.3"


[tool.poetry.group.notebook.dependencies]
jupyter = "^1.1.1"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
