[tool.poetry]
name = "strokepred"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
httpx = "^0.27.2"
pandas = "<2.2.0"
kagglehub = "^0.3.3"
pycaret = "^3.3.2"
kaleido = "0.2.1"
catboost = "^1.2.7"


[tool.poetry.group.notebook.dependencies]
jupyter = "^1.1.1"
matplotlib = "<3.8.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
